Styles widget top bar

--- a/themes/lemonroots/assets/sass/helpers/_variables.scss
+++ b/themes/lemonroots/assets/sass/helpers/_variables.scss
@@ -2,4 +2,10 @@ $brand-primary: #eee;
 $gray-base: #000 !default;
 
 
+$blue: #064fa2;
+$white: #ffffff;
+$darken: #333333;
+$skyblue: #00b8f1;
+
+
 
