--- a/themes/lemonroots/assets/sass/modules/headers/_header-top-bar.scss
+++ b/themes/lemonroots/assets/sass/modules/headers/_header-top-bar.scss
@@ -1,5 +1,20 @@
 .header__top-bar {
-  padding-top: 15px;
+  width: 100%;
+  padding: 10px;
+  background-color: $blue;
+  svg {
+  	color: $white;
+  	font-size: 15px;
+  }
+  a {
+  	color: $white;
+  	font-size: 15px;
+  	margin-left: 4px;
+  }
+  .header-top-link {
+  	display: inline-block;
+  	margin-left: 20px;
+  }
 }
 
 .top-bar__content {
