Complete homepage only design

--- a/themes/lemonroots/assets/sass/base/_layout.scss
+++ b/themes/lemonroots/assets/sass/base/_layout.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+
 * {
 	margin: 0;
 	padding: 0;
@@ -7,3 +9,45 @@
 h1, h2, h3 {
 	margin-top: 0px;
 }
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Roboto', sans-serif !important;
+}
+
+ul {
+	list-style: none;
+	margin: 0px;
+}
+
+a {
+	text-decoration: none !important;
+}
+
+button {
+	outline: none !important;
+	cursor: pointer;
+}
+
+.title {
+	font-size: 50px;
+	font-weight: 800;
+	margin-bottom: 15px;
+}
+
+.btn-usafact {
+	margin-top: 40px;
+	font-size: 25px;
+	background-color: $skyblue;
+	color: $white;
+	padding: 10px 30px;
+	border: none;
+	border-bottom: 2px solid #10607d;
+	border-radius: 15px;
+	svg {
+		margin-left: 10px;
+	}
+}
+
