--- a/themes/lemonroots/assets/sass/modules/headers/_header-standard.scss
+++ b/themes/lemonroots/assets/sass/modules/headers/_header-standard.scss
@@ -4,6 +4,30 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
+  }
+  nav {
+    ul {
+      li {
+        display: inline-block;
+        padding: 10px 18px;
+        &:last-child {
+          padding: 10px 0px 10px 18px;
+        }
+        a {
+          color: $darken;
+          font-size: 16px;
+        }
+        button {
+          font-size: 16px;
+          color: $white;
+          background-color: $skyblue;
+          border: 1px solid #67d5f7;
+          border-radius: 13px;
+          padding: 7px 18px;
+        }
+      }
+    }
   }
 }
 
@@ -12,7 +36,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 30px 0;
+  padding: 10px 0;
+  .custom-logo-link {
+    .custom-logo {
+      width: inherit;
+      max-height: 60px;
+    }
+  }
 
   &::before,
   &::after {
