--- a/themes/lemonroots/assets/sass/pages/_front-page.scss
+++ b/themes/lemonroots/assets/sass/pages/_front-page.scss
@@ -1,122 +1,34 @@
-body {
-	background-color: #fff;
+.navbar {
+	padding: 0px;
 }
 
-.text {
-	color: red;
+html.no-js {
+    margin: 0px !important;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: 'Roboto', sans-serif !important;
-}
-
-ul {
-	list-style: none;
-	margin: 0px;
-}
-
-a {
-	text-decoration: none !important;
-}
-
-button {
-	outline: none !important;
-	cursor: pointer;
-}
-
-header {
-	#header-top {
-		width: 100%;
-		background-color: $blue;
-		text-align: right;
-		padding: 9.5px 0px;
-		nav {
-			ul {
-				li {
-					display: inline-block;
-					margin-left: 20px;
-					a {
-						font-size: 16px;
-						color: $white;
-						svg {
-							margin-right: 4px;
-						}
-					}
-				}
-			}
-		}
-	}
-	#header-bottom {
-		width: 100%;
-		padding: 31.5px 0px;
-		border-top: 1px solid #576d86;
-		border-bottom: 1px solid #d2d1cc;
-		.container {
-			display: flex;
-			justify-content: space-between;
-			nav {
-				ul {
-					li {
-						display: inline-block;
-						padding: 10px 18px;
-						&:last-child {
-							padding: 10px 0px 10px 18px;
-						}
-						a {
-							color: $darken;
-							font-size: 22px;
-						}
-						button {
-							font-size: 22px;
-							color: $white;
-							background-color: $skyblue;
-							border: 1px solid #67d5f7;
-							border-radius: 13px;
-							padding: 10px 18px;
-						}
-					}
-				}
-			}
-		}
-	}
-}
 
 section#hero {
 	width: 100%;
-	padding: 210px 0px 178px 0px;
+	padding: 120px 0px;
 	color: $white;
 	background-position: center;
 	background-size: cover;
 	text-align: center;
 	border-bottom: 1px solid #d5d1ca;
-	h1 {
-		font-size: 70px;
-		font-weight: 800;
+	.subtitle {
+		font-size: 30px;
+		margin: 0px;
 	}
-	h4 {
-		font-size: 37px;
+	.text {
+		font-size: 18px;
 	}
-	p {
-		font-size: 22px;
-	}
-	button {
-		margin-top: 90px;
-		font-size: 34px;
-		background-color: $skyblue;
-		color: $white;
-		padding: 12.5px 49.35px;
-		border: none;
-		border-bottom: 2px solid #10607d;
-		border-radius: 15px;
-		svg {
-			margin-left: 10px;
-		}
-	}
+}
+
+.section-title {
+	font-size: 30px;
+	color: $darken;
+	margin: 0px;
 }
 
 section#clients {
@@ -124,11 +36,6 @@ section#clients {
 	background-color: $white;
 	padding: 30px 0px 50px 0px;
 	text-align: center;
-	h2 {
-		font-size: 44px;
-		color: $darken;
-		margin: 0px;
-	}
 	.container-flex {
 		display: flex;
 		justify-content: space-between;
@@ -152,33 +59,35 @@ section#link-blocks {
 			width: percentage(1/3);
 			padding: 0px 40px;
 			color: $white;
-			min-height: 337px;
-			max-height: 337px;
+			min-height: 225px;
+			max-height: 225px;
 			display: flex;
 			justify-content: center;
 			align-items: center;
 			flex-wrap: wrap;
-			background-position: center;
+			background-position: 0px 20px;
 			-webkit-background-size: cover;
 			background-size: cover;
+			background-repeat: no-repeat;
+			overflow: hidden;
 			.item { 
 				h3 {
-					font-size: 40px;
+					font-size: 25px;
 				}
 				.line {
-					width: 190px;
+					width: 125px;
 					height: 1px;
 					background-color: $white;
 					margin-top: 9px;
 					margin-bottom: 13px;
 				}
 				a {
-					font-size: 20px;
+					font-size: 14px;
 					color: $white;
 				}
 				p {
-					font-size: 16px;					
-					margin-bottom: 30px;
+					font-size: 12px;					
+					margin-bottom: 15px;
 				}	
 			}
 			&:nth-child(1), &:nth-child(5) {
@@ -201,10 +110,38 @@ section#link-blocks {
 	}
 }
 
-.navbar {
-	padding: 0px;
+#blog-posts {
+	width: 100%;
+	text-align: center;
+	padding: 70px 0px;
+	a {
+		.thumbnail {
+			width: 100%;
+			padding-bottom: 75%;
+			background-position: center;
+			-webkit-background-size: cover;
+			background-size: cover;
+		}
+	}
 }
 
-html.no-js {
-    // margin: 0px !important;
+// articles
+
+.article-container {
+	text-align: left;
+	margin-top: 35px;
+	.title-article {
+		font-size: 18px;
+		color: $blue;
+		margin-top: 20px;
+	}
+	.excerpt-article {
+		font-size: 12px;
+		color: $darken;
+		margin-bottom: 10px;
+	}
+	.link-article {
+		font-size: 14px;
+		color: $skyblue;
+	}
 }
