End sm and md Usafact

--- a/themes/lemonroots/assets/sass/modules/_nav-toggle.scss
+++ b/themes/lemonroots/assets/sass/modules/_nav-toggle.scss
@@ -4,6 +4,7 @@
   height: 38px;
   background-color: transparent;
   border: none;
+  cursor: pointer;
   border-radius: 4px;
   margin: 0 -10px 0 15px; // left is to counteract padding and right is so we don't butt up against logo
 
