--- a/themes/lemonroots/assets/sass/modules/_footer.scss
+++ b/themes/lemonroots/assets/sass/modules/_footer.scss
@@ -12,8 +12,17 @@ footer {
 		h2 {
 			font-size: 36px;
 		}
-		button {
-			margin-top: 30px;
+		.btn-usafact {
+			font-size: 28px;
+			background-color: $skyblue;
+			color: $white;
+			padding: 12px 35px;
+			border: none;
+			border-radius: 15px;
+			margin-top: 45px;
+			svg {
+				margin-left: 10px;
+			}
 		}
 	}
 	.footer-main {
@@ -22,27 +31,27 @@ footer {
 		background-position: right bottom;
 		background-repeat: no-repeat;
 		h3 {
-			margin-top: 40px;
-			font-size: 26px;
+			margin-top: 45px;
+			font-size: 32px;
 			color: $white;
 		}
 		a {
 			color: $white;
-			font-size: 12px;
+			font-size: 18px;
 			margin-bottom: 5px;
 			display: block;
 		}
 		img {
-			width: 200px;
-			margin-top: 40px;
-			margin-bottom: 20px;
+			width: 250px;
+			margin-top: 45px;
+			margin-bottom: 50px;
 		}
 	}
 	.footer-bottom {
 		background-color: #003f86;
 		color: $white;
-		font-size: 12px;
-		padding: 12px 0px;
+		font-size: 15px;
+		padding: 20px 0px;
 		p {
 			margin: 0px;
 		}
@@ -51,6 +60,67 @@ footer {
 			&:hover {
 				text-decoration: underline !important;
 			}
+		}
+	}
+}
+
+@include media-breakpoint-up(sm) {
+	footer {
+		.footer-top {
+			h2 {
+				font-size: 40px;
+			}
+			.btn-usafact {
+				font-size: 34px;
+				padding: 12px 65px;
+			}
+		}
+		.footer-main {
+			h3 {
+				margin-top: 45px;
+				font-size: 42px;
+			}
+			a {
+				color: $white;
+				font-size: 24px;
+				margin-bottom: 5px;
+				display: block;
+			}
+			img {
+				width: inherit;
+			    height: 237px;
+			    margin-top: 45px;
+			    margin-bottom: 50px;
+			}
+		}
+		.footer-bottom {
+			font-size: 18px;
+			padding: 20px 0px;
+		}
+	}
+}
+
+@include media-breakpoint-up(sm) {
+	footer {
+		.footer-top {
+			h2 {
+				font-size: 50px;
+			}
+		}
+		.footer-main {
+			h3 {
+				font-size: 30px;
+			}
+			a {
+				font-size: 16px;
+			}
+			img {
+				height: 200px;
+			}
+		}
+		.footer-bottom {
+			font-size: 16px;
+			padding: 25px 0px;
 		}
 	}
 }
