--- a/themes/lemonroots/assets/sass/pages/_front-page.scss
+++ b/themes/lemonroots/assets/sass/pages/_front-page.scss
@@ -6,7 +6,6 @@ section#hero {
 	background-position: center;
 	background-size: cover;
 	text-align: center;
-	border-bottom: 1px solid #d5d1ca;
 	.title {
 		font-size: 35px;
 		margin-bottom: 20px;
@@ -19,7 +18,35 @@ section#hero {
 		font-size: 12px;
 	}
 	.btn-usafact {
-		margin-top: 55px;
+		font-size: 28px;
+		background-color: $skyblue;
+		color: $white;
+		padding: 12px 35px;
+		border: none;
+		border-radius: 15px;
+		margin-top: 45px;
+		svg {
+			margin-left: 10px;
+		}
+	}
+}
+
+@include media-breakpoint-up(sm) {
+	section#hero {
+		.title {
+			font-size: 42px;
+		}
+		.subtitle {
+			font-size: 24px;
+		}
+		.text {
+			font-size: 14px;
+		}
+		.btn-usafact {
+			font-size: 34px;
+			padding: 11px 50px;
+			margin-top: 50px;
+		}
 	}
 }
 
@@ -40,8 +67,37 @@ section#clients {
 			align-items: center;
 			margin-top: 50px;
 			img {
-				width: inherit;
 				height: 80px;
+			}
+		}
+	}
+}
+
+@include media-breakpoint-up(sm) {
+	section#clients {
+		.section-title {
+			font-size: 38px;
+		}
+		.container-flex {
+			.client {
+				img {
+					width: inherit;
+					height: auto;
+				}
+			}
+		}
+	}
+}
+
+@include media-breakpoint-up(md) {
+	section#clients {
+		.container-flex {
+			.client {
+				width: percentage(1/3);
+				img {
+					width: auto;
+					height: 100px;
+				}
 			}
 		}
 	}
@@ -58,8 +114,8 @@ section#services {
 			width: 100%;
 			padding: 0px 15px;
 			color: $white;
-			min-height: 250px;
-			max-height: 250px;
+			min-height: 300px;
+			max-height: 300px;
 			display: flex;
 			justify-content: center;
 			align-items: center;
@@ -71,11 +127,11 @@ section#services {
 			overflow: hidden;
 			.item { 
 				h3.title-item {
-					font-size: 25px;
+					font-size: 26px;
 				}
 				.line {
-					width: 192px;
-					height: 1px;
+					width: 160px;
+					height: 3px;
 					background-color: $white;
 					margin-top: 9px;
 					margin-bottom: 13px;
@@ -85,7 +141,7 @@ section#services {
 					color: $white;
 				}
 				p.text-item {
-					font-size: 15px;					
+					font-size: 18px;					
 					margin-bottom: 20px;
 				}	
 			}
@@ -109,6 +165,83 @@ section#services {
 	}
 }
 
+@include media-breakpoint-up(sm) {
+	section#services {
+		.container-flex {
+			.container-item {
+				min-height: 332px;
+				max-height: 332px;
+				.item { 
+					h3.title-item {
+						font-size: 32px;
+					}
+					.line {
+						width: 192px;
+					}
+					a.link-item {
+						font-size: 21px;
+					}
+					p.text-item {
+						font-size: 23px;		
+					}	
+				}
+				&:nth-child(2), &:nth-child(4) {
+					a.link-item {
+						font-size: 23px;
+					}
+				}
+			}
+		}
+	}
+}
+
+@include media-breakpoint-up(sm) {
+	section#services {
+		.container-flex {
+			.container-item {
+				width: 50%;
+				min-height: 332px;
+				max-height: 332px;
+				.item { 
+					h3.title-item {
+						font-size: 30px;
+					}
+					.line {
+						width: 192px;
+					}
+					a.link-item {
+						font-size: 22px;
+					}
+					p.text-item {
+						font-size: 20px;		
+					}	
+				}
+				&:nth-child(1), &:nth-child(4) {
+					background-color: $skyblue;
+					color: $white;
+					.line {
+						background-color: $white;
+					}
+					a.link-item {
+						color: $white;
+						font-size: 22px;
+					}
+				}
+				&:nth-child(2), &:nth-child(5) {
+					background-color: #eaeaea;
+					color: $darken;
+					.line {
+						background-color: $darken;
+					}
+					a.link-item {
+						color: $darken;
+						font-size: 22px;
+					}
+				}
+			}
+		}
+	}
+}
 #blog-posts {
 	width: 100%;
 	text-align: center;
