--- a/themes/lemonroots/assets/sass/base/_typography.scss
+++ b/themes/lemonroots/assets/sass/base/_typography.scss
@@ -1,3 +1,17 @@
+body {
+	font-size: 12px;
+
+	@include media-breakpoint-up(sm) {
+		font-size: 14px;
+	}
+	@include media-breakpoint-up(md) {
+		font-size: 16px;
+	}
+
+	
+}
+
+
 h1,
 h2,
 h3,
