--- a/themes/lemonroots/assets/sass/modules/_content.scss
+++ b/themes/lemonroots/assets/sass/modules/_content.scss
@@ -1,6 +1,25 @@
-.content { }
-
-.main { }
+.content {
+	.entry-title {
+		font-size: 26px;
+		color: $blue;
+	}
+	.entry-content {
+		h1 {
+			font-size: 26px;
+			color: $blue;
+		}
+		h2 {
+			font-size: 16px;
+			color: #00aeef;
+			font-weight: medium;
+		}
+	}
+}
+.main {
+	.container-post	{
+		padding: 45px 0px;
+	}
+}
 
 
 
