--- a/themes/lemonroots/assets/sass/modules/_footer.scss
+++ b/themes/lemonroots/assets/sass/modules/_footer.scss
@@ -10,17 +10,24 @@ footer {
 		background-size: cover;
 		background-repeat: no-repeat;
 		h2 {
-			font-size: 36px;
+			font-size: 34px;
+			padding: 0px 10px;
+			text-shadow: 2px 2px 2px $darken; 
 		}
 		.btn-usafact {
-			font-size: 28px;
+			font-size: 24px;
 			background-color: $skyblue;
 			color: $white;
 			padding: 12px 35px;
 			border: none;
 			border-radius: 15px;
 			margin-top: 45px;
+			transition: 1s all ease;
+			&:hover {
+			  background-color: $blue;
+			}
 			svg {
+				font-size: 24px;
 				margin-left: 10px;
 			}
 		}
@@ -28,29 +35,33 @@ footer {
 	.footer-main {
 		width: 100%;
 		padding: 0px 0px 50px 0px;
-		background-position: right bottom;
 		background-repeat: no-repeat;
+		background-position: 100% 100%;
+
 		h3 {
-			margin-top: 45px;
-			font-size: 32px;
+			padding-top: 45px;
+			font-size: 26px;
 			color: $white;
 		}
 		a {
 			color: $white;
-			font-size: 18px;
-			margin-bottom: 5px;
+			font-size: 12px;
+			padding-bottom: 5px;
 			display: block;
+			&:hover {
+				text-decoration: underline !important;
+			}
 		}
 		img {
-			width: 250px;
-			margin-top: 45px;
-			margin-bottom: 50px;
+			width: 200px;
+			padding-top: 45px;
+			padding-bottom: 30px;
 		}
 	}
 	.footer-bottom {
 		background-color: #003f86;
 		color: $white;
-		font-size: 15px;
+		font-size: 12px;
 		padding: 20px 0px;
 		p {
 			margin: 0px;
@@ -72,55 +83,57 @@ footer {
 			}
 			.btn-usafact {
 				font-size: 34px;
-				padding: 12px 65px;
+				padding: 10px 30px;
 			}
-		}
-		.footer-main {
-			h3 {
-				margin-top: 45px;
-				font-size: 42px;
-			}
-			a {
-				color: $white;
-				font-size: 24px;
-				margin-bottom: 5px;
-				display: block;
-			}
-			img {
-				width: inherit;
-			    height: 237px;
-			    margin-top: 45px;
-			    margin-bottom: 50px;
-			}
-		}
-		.footer-bottom {
-			font-size: 18px;
-			padding: 20px 0px;
 		}
 	}
 }
 
-@include media-breakpoint-up(sm) {
+@include media-breakpoint-up(md) {
 	footer {
 		.footer-top {
 			h2 {
-				font-size: 50px;
+				font-size: 52px;
 			}
 		}
 		.footer-main {
-			h3 {
-				font-size: 30px;
-			}
-			a {
-				font-size: 16px;
-			}
-			img {
-				height: 200px;
-			}
-		}
-		.footer-bottom {
-			font-size: 16px;
-			padding: 25px 0px;
+			background-position: 200% 120%;
 		}
 	}
 }
+
+@include media-breakpoint-up(lg) {
+	footer {
+		.footer-top {
+			padding: 60px 0px; 
+			h2 {
+				font-size: 52px;
+				padding: 0px 50px;
+			}
+			.btn-usafact {
+				margin-top: 20px;
+				font-size: 24px;
+			}
+		}
+		.footer-main {
+			background-position: 100% -300%;
+			img {
+				width: 200px;
+			}
+		}
+		.footer-bottom {
+			font-size: 12px;
+			padding: 15px 0px;
+		}
+	}
+}
+
+@include media-breakpoint-up(xl) {
+	footer {
+		.footer-main {
+			background-position: 100% 1300%;
+		}
+	}
+}
+
+
