--- a/themes/lemonroots/assets/sass/pages/_front-page.scss
+++ b/themes/lemonroots/assets/sass/pages/_front-page.scss
@@ -1,7 +1,7 @@
 // Section Hero
 section#hero {
 	width: 100%;
-	padding: 150px 0px 100px 0px;
+	padding: 130px 0px 85px 0px;
 	color: $white;
 	background-position: center;
 	background-size: cover;
@@ -11,20 +11,24 @@ section#hero {
 		margin-bottom: 20px;
 	}
 	.subtitle {
-		font-size: 22px;
+		font-size: 20px;
 		margin: 5px;
 	}
 	.text {
 		font-size: 12px;
 	}
 	.btn-usafact {
-		font-size: 28px;
+		font-size: 24px;
 		background-color: $skyblue;
 		color: $white;
-		padding: 12px 35px;
+		padding: 10px 26px;
 		border: none;
 		border-radius: 15px;
 		margin-top: 45px;
+		transition: 1s all ease-out;
+		&:hover {
+		  background-color: $blue;
+		}
 		svg {
 			margin-left: 10px;
 		}
@@ -42,13 +46,48 @@ section#hero {
 		.text {
 			font-size: 14px;
 		}
-		.btn-usafact {
-			font-size: 34px;
-			padding: 11px 50px;
-			margin-top: 50px;
+	}
+}
+
+
+@include media-breakpoint-up(md) {
+	section#hero {
+		padding: 130px 0px 90px 0px;
+		.title {
+			font-size: 45px;
+		}
+		.subtitle {
+			font-size: 25px;
+			display: inline-flex;
+			span {
+				margin-right: 5px;
+			}
+		}
+		.text {
+			font-size: 16px;
 		}
 	}
 }
+
+@include media-breakpoint-up(lg) {
+	section#hero {
+		padding: 125px 0px 110px 0px;
+		.title {
+			font-size: 52px;
+		}
+		.subtitle {
+			font-size: 26px;
+			display: inline-flex;
+			span {
+				margin-right: 5px;
+			}
+		}
+		.text {
+			font-size: 16px;
+		}
+	}
+}
+
 
 // Section Clients
 section#clients {
@@ -103,6 +142,39 @@ section#clients {
 	}
 }
 
+@include media-breakpoint-up(md) {
+	section#clients {
+		.container-flex {
+			.client {
+				width: percentage(1/3);
+				img {
+					width: auto;
+					height: 100px;
+				}
+			}
+		}
+	}
+}
+
+@include media-breakpoint-up(lg) {
+	section#clients {
+		padding: 40px 0px 55px 0px;
+		.section-title {
+			font-size: 30px;
+		}
+		.container-flex {
+			.client {
+				width: percentage(1/6);
+				margin-top: 25px;
+				img {
+					width: auto;
+					height: 90px;
+				}
+			}
+		}
+	}
+}
+
 // Section services
 section#services {
 	width: 100%;
@@ -112,10 +184,9 @@ section#services {
 		flex-wrap: wrap;
 		.container-item {
 			width: 100%;
-			padding: 0px 15px;
+			padding: 20px 20px;
 			color: $white;
-			min-height: 300px;
-			max-height: 300px;
+			min-height: 250px;
 			display: flex;
 			justify-content: center;
 			align-items: center;
@@ -130,8 +201,8 @@ section#services {
 					font-size: 26px;
 				}
 				.line {
-					width: 160px;
-					height: 3px;
+					width: 125px;
+					height: 2px;
 					background-color: $white;
 					margin-top: 9px;
 					margin-bottom: 13px;
@@ -139,9 +210,15 @@ section#services {
 				a.link-item {
 					font-size: 18px;
 					color: $white;
+					&:hover {
+						text-decoration: underline !important;
+					}
+					svg {
+						margin-left: 5px;
+					}
 				}
 				p.text-item {
-					font-size: 18px;					
+					font-size: 16px;					
 					margin-bottom: 20px;
 				}	
 			}
@@ -158,39 +235,14 @@ section#services {
 					color: $darken;
 				}
 			}
+			&:nth-child(4) {
+				-webkit-background-size: 0 0;
+				background-size: 0 0;
+			}
 			&:nth-child(3), &:nth-child(6) {
 				background-color: $blue;
 			}
-		}
-	}
-}
 
-@include media-breakpoint-up(sm) {
-	section#services {
-		.container-flex {
-			.container-item {
-				min-height: 332px;
-				max-height: 332px;
-				.item { 
-					h3.title-item {
-						font-size: 32px;
-					}
-					.line {
-						width: 192px;
-					}
-					a.link-item {
-						font-size: 21px;
-					}
-					p.text-item {
-						font-size: 23px;		
-					}	
-				}
-				&:nth-child(2), &:nth-child(4) {
-					a.link-item {
-						font-size: 23px;
-					}
-				}
-			}
 		}
 	}
 }
@@ -200,23 +252,18 @@ section#services {
 		.container-flex {
 			.container-item {
 				width: 50%;
-				min-height: 332px;
-				max-height: 332px;
 				.item { 
 					h3.title-item {
-						font-size: 30px;
-					}
-					.line {
-						width: 192px;
-					}
-					a.link-item {
 						font-size: 22px;
 					}
+					a.link-item {
+						font-size: 14px;
+					}
 					p.text-item {
-						font-size: 20px;		
+						font-size: 12px;		
 					}	
 				}
-				&:nth-child(1), &:nth-child(4) {
+				&:nth-child(4) {
 					background-color: $skyblue;
 					color: $white;
 					.line {
@@ -224,10 +271,57 @@ section#services {
 					}
 					a.link-item {
 						color: $white;
-						font-size: 22px;
+						font-size: 14px;
 					}
 				}
-				&:nth-child(2), &:nth-child(5) {
+				&:nth-child(5) {
+					background-color: #eaeaea;
+					color: $darken;
+					.line {
+						background-color: $darken;
+					}
+					a.link-item {
+						font-size: 14px;
+						color: $darken;
+					}
+				}
+			}
+		}
+	}
+}
+
+@include media-breakpoint-up(lg) {
+	section#services {
+		.container-flex {
+			.container-item {
+				min-height: 250px;
+				width: percentage(1/3);
+				.item { 
+					h3.title-item {
+						font-size: 25px;
+					}
+					.line {					
+						height: 1px;
+					}
+					a.link-item {
+						font-size: 14px;
+					}
+					p.text-item {
+						font-size: 12px;	
+					}	
+				}
+				&:nth-child(1), &:nth-child(5) {
+					background-color: $skyblue;
+					color: $white;
+					.line {
+						background-color: $white;
+					}
+					a.link-item {
+						color: $white;
+						font-size: 17px;
+					}
+				}
+				&:nth-child(2), &:nth-child(6) {
 					background-color: #eaeaea;
 					color: $darken;
 					.line {
@@ -235,19 +329,37 @@ section#services {
 					}
 					a.link-item {
 						color: $darken;
-						font-size: 22px;
+						font-size: 17px;
+					}
+				}
+				&:nth-child(6) {
+					-webkit-background-size: 0 0;
+					background-size: 0 0;
+				}
+				&:nth-child(4) {
+					-webkit-background-size: cover;
+					background-size: cover;
+					background-color: $blue;
+					color: $white;
+					.line {
+						background-color: $white;
+					}
+					a.link-item {
+						color: $white;
 					}
 				}
 			}
 		}
 	}
 }
+
 #blog-posts {
 	width: 100%;
 	text-align: center;
-	padding: 70px 0px;
+	padding: 60px 0px;
 	a {
-		.thumbnail {
+		.featured-thumbnail {
+			padding: 0px 15px;
 			width: 100%;
 			padding-bottom: 75%;
 			background-position: center;
@@ -263,9 +375,12 @@ section#services {
 	text-align: left;
 	margin-top: 35px;
 	.title-article {
-		font-size: 18px;
+		font-size: 16px;
 		color: $blue;
 		margin-top: 20px;
+		&:hover {
+			color: $skyblue;
+		}
 	}
 	.excerpt-article {
 		font-size: 12px;
@@ -275,5 +390,8 @@ section#services {
 	.link-article {
 		font-size: 14px;
 		color: $skyblue;
+		&:hover {
+			text-decoration: underline !important;
+		}
 	}
 }
