--- a/themes/lemonroots/assets/sass/modules/_header.scss
+++ b/themes/lemonroots/assets/sass/modules/_header.scss
@@ -73,12 +73,11 @@
             margin-bottom: 10px;
         }   
         p {
-            font-size: 12px;
             color: $white;
             margin-bottom: 45px;
         }
         a {
-            font-size: 18px;
+            font-size: get-size(map16);
             background-color: $skyblue;
             color: $white;
             padding: 10px 25px;
