Finished: inner page

--- a/themes/lemonroots/assets/sass/base/_typography.scss
+++ b/themes/lemonroots/assets/sass/base/_typography.scss
@@ -82,7 +82,7 @@ h2 {
 }
 
 h3 {
-	font-size: get-size(map22);
+	font-size: get-size(map25);
 }
 
 h4 {
@@ -94,10 +94,6 @@ h5 {
 }
 
 h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-
+h2 {
+	font-weight: bold;
 }
