--- a/themes/lemonroots/assets/sass/elements/_buttons.scss
+++ b/themes/lemonroots/assets/sass/elements/_buttons.scss
@@ -21,11 +21,23 @@
   }
 }
 
-
-button {
-  outline: none !important;
+.btn-usafact {
+  font-size: get-size(map25);
+  background-color: $skyblue;
+  color: $white;
+  padding: 12px 30px;
+  border: none;
+  border-radius: 15px;
+  margin-top: 45px;
+  transition: 1s all ease-out;
+  border-bottom: 1px solid #0f6382;
   cursor: pointer;
+  outline: none !important;
+  &:hover {
+    background-color: $blue;
+  }
+  svg {
+    margin-left: 10px;
+  }
 }
-
-
 
