--- a/themes/lemonroots/assets/sass/modules/_posts.scss
+++ b/themes/lemonroots/assets/sass/modules/_posts.scss
@@ -1,5 +1,56 @@
 .hentry header { }
 .hentry time { }
 .hentry .byline { }
-.hentry .entry-content { }
+.hentry .entry-content { 
+	.entry-title {
+		font-size: get-size(map32);
+		color: $blue;
+	}
+	.entry-content {
+		h1 {
+			font-size: get-size(map32);
+			color: $blue;
+		}
+		h2 {
+			font-size: get-size(map22);
+			color: #00aeef !important;
+			font-weight: medium;
+		}
+		a {
+			color: $skyblue;
+			text-decoration: none;
+			cursor: pointer;
+			&:hover {
+				color: #080eff;
+			}
+		}
+	}
+}
 .hentry footer { }
+
+.container-post {
+	padding: 45px 0px;
+	.widget_text {
+		h3{
+			font-size: get-size(map22);
+		}
+	}
+	.font-awesome-link {
+		padding: 10px 0px;
+		border-bottom: 1px solid $darken;
+		span {
+			svg {
+				color: $skyblue;
+			}
+			a {
+				width: 100%;
+				margin: 20px 0px;
+				color: $darken;
+				text-decoration: none;
+				&:hover {
+					color: $blue;
+				}
+			}
+		}
+	}
+}
