--- a/themes/lemonroots/assets/sass/modules/_content.scss
+++ b/themes/lemonroots/assets/sass/modules/_content.scss
@@ -1,23 +1,22 @@
 .content {
-	.entry-title {
-		font-size: 26px;
-		color: $blue;
-	}
 	.entry-content {
 		h1 {
-			font-size: 26px;
+			font-size: get-size(map32);
 			color: $blue;
 		}
 		h2 {
-			font-size: 16px;
-			color: #00aeef;
+			font-size: get-size(map22);
+			color: #00aeef !important;
 			font-weight: medium;
 		}
-	}
-}
-.main {
-	.container-post	{
-		padding: 45px 0px;
+		a {
+			color: $skyblue;
+			text-decoration: none;
+			cursor: pointer;
+			&:hover {
+				color: #080eff;
+			}
+		}
 	}
 }
 
