--- a/themes/lemonroots/assets/sass/modules/_footer.scss
+++ b/themes/lemonroots/assets/sass/modules/_footer.scss
@@ -10,26 +10,9 @@ footer {
 		background-size: cover;
 		background-repeat: no-repeat;
 		h2 {
-			font-size: 34px;
+			font-size: get-size(map45);
 			padding: 0px 10px;
 			text-shadow: 2px 2px 2px $darken; 
-		}
-		.btn-usafact {
-			font-size: 24px;
-			background-color: $skyblue;
-			color: $white;
-			padding: 12px 35px;
-			border: none;
-			border-radius: 15px;
-			margin-top: 45px;
-			transition: 1s all ease;
-			&:hover {
-			  background-color: $blue;
-			}
-			svg {
-				font-size: 24px;
-				margin-left: 10px;
-			}
 		}
 	}
 	.footer-main {
@@ -37,7 +20,12 @@ footer {
 		padding: 0px 0px 50px 0px;
 		background-repeat: no-repeat;
 		background-position: 100% 100%;
-
+		@include media-breakpoint-up(md) {
+			background-position: 100% 125%;
+		}
+		@include media-breakpoint-up(lg) {
+			background-position: 100% -100%;
+		}
 		h3 {
 			padding-top: 45px;
 			font-size: 26px;
@@ -74,66 +62,3 @@ footer {
 		}
 	}
 }
-
-@include media-breakpoint-up(sm) {
-	footer {
-		.footer-top {
-			h2 {
-				font-size: 40px;
-			}
-			.btn-usafact {
-				font-size: 34px;
-				padding: 10px 30px;
-			}
-		}
-	}
-}
-
-@include media-breakpoint-up(md) {
-	footer {
-		.footer-top {
-			h2 {
-				font-size: 52px;
-			}
-		}
-		.footer-main {
-			background-position: 200% 120%;
-		}
-	}
-}
-
-@include media-breakpoint-up(lg) {
-	footer {
-		.footer-top {
-			padding: 60px 0px; 
-			h2 {
-				font-size: 52px;
-				padding: 0px 50px;
-			}
-			.btn-usafact {
-				margin-top: 20px;
-				font-size: 24px;
-			}
-		}
-		.footer-main {
-			background-position: 100% -300%;
-			img {
-				width: 200px;
-			}
-		}
-		.footer-bottom {
-			font-size: 12px;
-			padding: 15px 0px;
-		}
-	}
-}
-
-@include media-breakpoint-up(xl) {
-	footer {
-		.footer-main {
-			background-position: 100% 1300%;
-		}
-	}
-}
-
-
