--- a/themes/lemonroots/assets/sass/modules/_header.scss
+++ b/themes/lemonroots/assets/sass/modules/_header.scss
@@ -21,9 +21,6 @@
 	text-align: center;
 	padding-top: 20px;
 	padding-bottom: 20px;
-	h1 {
-		//color: #fff;
-	}
 }
 
 .custom-header {
@@ -50,40 +47,49 @@
     background-position: center center;
     background-color: $brand-primary;
     text-align: left;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    @include media-breakpoint-up(sm) {
-    	padding-top: 80px;
-    	padding-bottom: 80px;
-    }
-    @include media-breakpoint-up(lg) {
-    	padding-top: 100px;
-    	padding-bottom: 100px;
-    }
 }
 
 
 .standard-header, .image-header {
-    .container-fields {
-        width: 50%;
-        h1 {
-            font-size: 30px;
-            color: $white;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }   
-        p {
-            color: $white;
-            margin-bottom: 45px;
+    .shadow {
+        width: 100%;
+        background-color: rgba(0,0,0,.5);
+        padding-top: 60px;
+        padding-bottom: 60px;
+        @include media-breakpoint-up(sm) {
+            padding-top: 80px;
+            padding-bottom: 80px;
         }
-        a {
-            font-size: get-size(map16);
-            background-color: $skyblue;
-            color: $white;
-            padding: 10px 25px;
-            border-radius: 12px;
-            svg {
-                margin-left: 10px;
+        @include media-breakpoint-up(lg) {
+            padding-top: 100px;
+            padding-bottom: 100px;
+        }
+        .container-fields {
+            width: 50%;
+            h2 {
+                font-size: get-size(map28);
+                color: $white;
+                font-weight: bold;
+                margin-bottom: 10px;
+            }   
+            p {
+                color: $white;
+                margin-bottom: 45px;
+            }
+            a {
+                font-size: get-size(map16);
+                background-color: $skyblue;
+                color: $white;
+                padding: 11px 30px;
+                border-radius: 10px;
+                text-decoration: none;
+                transition: 1s all ease-out;
+                &:hover {
+                    background-color: $blue;
+                }
+                svg {
+                    margin-left: 10px;
+                }
             }
         }
     }
