--- a/themes/lemonroots/assets/sass/pages/_front-page.scss
+++ b/themes/lemonroots/assets/sass/pages/_front-page.scss
@@ -1,7 +1,7 @@
 // Section Hero
 section#hero {
 	width: 100%;
-	padding: 130px 0px 85px 0px;
+	padding: 150px 0px 130px 0px;
 	color: $white;
 	background-position: center;
 	background-size: cover;
@@ -13,47 +13,17 @@ section#hero {
 	.subtitle {
 		font-size: get-size(map25);
 		margin: 5px;
-	}
-	.text {
-		font-size: get-size(map16);
-	}
-	.btn-usafact {
-		font-size: get-size(map25);
-		background-color: $skyblue;
-		color: $white;
-		padding: 10px 26px;
-		border: none;
-		border-radius: 15px;
-		margin-top: 45px;
-		transition: 1s all ease-out;
-		&:hover {
-		  background-color: $blue;
-		}
-		svg {
-			margin-left: 10px;
-		}
-	}
-}
-
-
-@include media-breakpoint-up(md) {
-	section#hero {
-		padding: 130px 0px 90px 0px;
-		.subtitle {
+		@include media-breakpoint-up(md) {
 			display: inline-flex;
 			span {
 				margin-right: 5px;
 			}
 		}
 	}
-}
-
-@include media-breakpoint-up(lg) {
-	section#hero {
-		padding: 125px 0px 110px 0px;
+	.text {
+		font-size: get-size(map16);
 	}
 }
-
 
 // Section Clients
 section#clients {
@@ -67,61 +37,36 @@ section#clients {
 		flex-wrap: wrap;
 		.client {
 			width: 50%;
+			@include media-breakpoint-up(md) {
+				width: percentage(1/3);
+			}
+			@include media-breakpoint-up(lg) {
+				width: percentage(1/6);
+			}
 			display: flex;
 			justify-content: center;
 			align-items: center;
 			margin-top: 50px;
 			img {
 				height: 80px;
-			}
-		}
-	}
-	h2.section-title {
-		font-size: get-size(map28);
-	}
-}
-
-@include media-breakpoint-up(sm) {
-	section#clients {
-		.container-flex {
-			.client {
-				img {
+				@include media-breakpoint-up(sm) {
 					width: inherit;
 					height: auto;
 				}
-			}
-		}
-	}
-}
-
-@include media-breakpoint-up(md) {
-	section#clients {
-		.container-flex {
-			.client {
-				width: percentage(1/3);
-				img {
+				@include media-breakpoint-up(md) {
 					width: auto;
 					height: 100px;
 				}
-			}
-		}
-	}
-}
-
-
-@include media-breakpoint-up(lg) {
-	section#clients {
-		padding: 40px 0px 55px 0px;
-		.container-flex {
-			.client {
-				width: percentage(1/6);
-				margin-top: 25px;
-				img {
+				@include media-breakpoint-up(lg) {
 					width: auto;
 					height: 90px;
 				}
 			}
 		}
+	}
+	h2.section-title {
+		font-size: get-size(map28);
+		font-weight: normal;
 	}
 }
 
@@ -136,7 +81,7 @@ section#services {
 			width: 100%;
 			padding: 20px 20px;
 			color: $white;
-			min-height: 250px;
+			min-height: 150px;
 			display: flex;
 			justify-content: center;
 			align-items: center;
@@ -152,7 +97,7 @@ section#services {
 				}
 				.line {
 					width: 125px;
-					height: 2px;
+					height: 1px;
 					background-color: $white;
 					margin-top: 9px;
 					margin-bottom: 13px;
@@ -167,8 +112,7 @@ section#services {
 						margin-left: 5px;
 					}
 				}
-				p.text-item {
-					font-size: 16px;					
+				p.text-item {				
 					margin-bottom: 20px;
 				}	
 			}
@@ -192,15 +136,8 @@ section#services {
 			&:nth-child(3), &:nth-child(6) {
 				background-color: $blue;
 			}
-
-		}
-	}
-}
-
-@include media-breakpoint-up(sm) {
-	section#services {
-		.container-flex {
-			.container-item {
+			@include media-breakpoint-up(sm) {
+				min-height: 200px;
 				width: 50%;
 				&:nth-child(4) {
 					background-color: $skyblue;
@@ -223,27 +160,9 @@ section#services {
 					}
 				}
 			}
-		}
-	}
-}
-
-@include media-breakpoint-up(lg) {
-	section#services {
-		.container-flex {
-			.container-item {
+			@include media-breakpoint-up(lg) {
 				min-height: 250px;
 				width: percentage(1/3);
-				.item { 
-					.line {					
-						height: 1px;
-					}
-					a.link-item {
-						font-size: 14px;
-					}
-					p.text-item {
-						font-size: 12px;	
-					}	
-				}
 				&:nth-child(1), &:nth-child(5) {
 					background-color: $skyblue;
 					color: $white;
@@ -289,6 +208,9 @@ section#services {
 	width: 100%;
 	text-align: center;
 	padding: 60px 0px;
+	h2 {
+		font-weight: normal;
+	}
 	a {
 		.featured-thumbnail {
 			padding: 0px 15px;
@@ -299,29 +221,27 @@ section#services {
 			background-size: cover;
 		}
 	}
-}
-
-// Featured Posts
-.article-container {
-	text-align: left;
-	margin-top: 35px;
-	h3.title-article {
-		font-size: get-size(map16);
-		color: $blue;
-		margin-top: 20px;
-		&:hover {
-			color: $skyblue;
+	.article-container {
+		text-align: left;
+		margin-top: 35px;
+		h3.title-article {
+			font-size: get-size(map16);
+			color: $blue;
+			margin-top: 20px;
+			&:hover {
+				color: $skyblue;
+			}
 		}
-	}
-	p.excerpt-article {
-		color: $darken;
-		margin-bottom: 10px;
-	}
-	.link-article {
-		font-size: get-size(map14);
-		color: $skyblue;
-		&:hover {
-			text-decoration: underline !important;
+		p.excerpt-article {
+			color: $darken;
+			margin-bottom: 10px;
+		}
+		.link-article {
+			font-size: get-size(map14);
+			color: $skyblue;
+			&:hover {
+				text-decoration: underline !important;
+			}
 		}
 	}
 }
