Minor changes css

--- a/themes/lemonroots/assets/sass/pages/_front-page.scss
+++ b/themes/lemonroots/assets/sass/pages/_front-page.scss
@@ -81,7 +81,7 @@ section#services {
 			width: 100%;
 			padding: 20px 20px;
 			color: $white;
-			min-height: 150px;
+			min-height: 300px;
 			display: flex;
 			justify-content: center;
 			align-items: center;
@@ -137,7 +137,6 @@ section#services {
 				background-color: $blue;
 			}
 			@include media-breakpoint-up(sm) {
-				min-height: 200px;
 				width: 50%;
 				&:nth-child(4) {
 					background-color: $skyblue;
@@ -161,7 +160,6 @@ section#services {
 				}
 			}
 			@include media-breakpoint-up(lg) {
-				min-height: 250px;
 				width: percentage(1/3);
 				&:nth-child(1), &:nth-child(5) {
 					background-color: $skyblue;
@@ -211,26 +209,33 @@ section#services {
 	h2 {
 		font-weight: normal;
 	}
-	a {
+	.container-thumbnail {
+		position: relative;
+		width: 100%;
+		padding-bottom: 75%;
+		overflow: hidden;
 		.featured-thumbnail {
+			position: absolute;
 			padding: 0px 15px;
 			width: 100%;
-			padding-bottom: 75%;
+			height: 100%;
 			background-position: center;
 			-webkit-background-size: cover;
 			background-size: cover;
+			transition: 1s all ease-out;
+		}
+		&:hover .featured-thumbnail {
+			transform: scale(1.1);
 		}
 	}
 	.article-container {
 		text-align: left;
 		margin-top: 35px;
+		overflow: hidden;
 		h3.title-article {
 			font-size: get-size(map16);
 			color: $blue;
 			margin-top: 20px;
-			&:hover {
-				color: $skyblue;
-			}
 		}
 		p.excerpt-article {
 			color: $darken;
