--- a/themes/lemonroots/assets/sass/modules/_posts.scss
+++ b/themes/lemonroots/assets/sass/modules/_posts.scss
@@ -32,17 +32,19 @@
 	padding: 45px 0px;
 	.widget_text {
 		h3{
-			font-size: get-size(map22);
+			font-size: get-size(map16);
 		}
 	}
 	.font-awesome-link {
 		padding: 10px 0px;
-		border-bottom: 1px solid $darken;
+		border-bottom: 1px solid #ccc;
 		span {
 			svg {
+				font-size: 12px;
 				color: $skyblue;
 			}
 			a {
+				font-size: get-size(map12);
 				width: 100%;
 				margin: 20px 0px;
 				color: $darken;
