--- a/themes/lemonroots/assets/sass/elements/_buttons.scss
+++ b/themes/lemonroots/assets/sass/elements/_buttons.scss
@@ -30,14 +30,16 @@
   border-radius: 15px;
   margin-top: 45px;
   transition: 1s all ease-out;
-  border-bottom: 1px solid #0f6382;
   cursor: pointer;
-  outline: none !important;
   &:hover {
     background-color: $blue;
   }
   svg {
     margin-left: 10px;
   }
+}
+
+button:focus {
+    outline: none;
 }
 
